# Few-Shot-Learning-Roof-Segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  fewshot_approaches_setup.ipynb  pyproject.toml  tutorial.ipynb
.github/workflows/: render-notebook.yml
notebooks/: rid_roof_segments.ipynb  try_few_shot.ipynb  tutorial_few_shot_learning.ipynb
presentation/: dimmery.scss  tutorial-new-tutorial-group-1.qmd
