[build-system]
requires = ["setuptools >= 69.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "few_shot_utils"
version = "0.0.1"
description = "DL Tutorial 2025: Few-shot learning tutorial on satellite imagery for rooftop detection."
readme = "README.md"
authors = [
    {name = "Tutorial Group 1"},
]
maintainers = [{name = "Tutorial Group 1"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing"
]
requires-python = ">=3.11"
dependencies = [
    'numpy>=1.24.0',
    'pandas>=2.1.0',
    'matplotlib>=3.8.0',
    'Pillow>=10.0.0',
    'scikit-learn>=1.3.0',
    'tqdm>=4.66.0',
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.2",
    "ipykernel==6.29.3",
    "nbformat>=5.9.0",
    "pre-commit==3.6.0",
]
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.urls]
Documentation = "https://github.com/hertie-data-science-lab/tutorial-new-tutorial-group-1/docs"
Source = "https://github.com/hertie-data-science-lab/tutorial-new-tutorial-group-1"
Tracker = "https://github.com/hertie-data-science-lab/tutorial-new-tutorial-group-1/issues"

#Global ruff configuration
[tool.ruff]
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".eggs",
    ".cache",
    ".tox",
    "venv",
    ".venv",
    ".env",
    "_build",
    "buck-out",
    "build",
    "__pycache__",
    "dist",
    "nssm",
    "obj",
    "out",
    "packages",
    "pywin32",
    "swagger_client",
]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings (includes W293)
    "I",   # isort
    "D",   # pydocstyle
    "ANN", # flake8-annotations
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # bandit
    "N",   # pep8-naming
    "PL",  # pylint
]
ignore = [
    # Docstrings: relaxed
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",

    # Conflicts / formatting preferences
    "D211",
    "D212",
    "COM812",
    "D203",
]

# Allow underscore-prefixed unused variables
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Relax security checks in notebooks/tutorial code
"*.ipynb" = [
    "T201",    # allow print
    "ANN",     # no type annotation requirements
    "E501",    # allow long lines
    "E402",    # allow imports not at top of file
    "I001",    # relaxed import sorting
    "PLC0415", # allow imports outside top-level
    "PLR0913", # allow many function args
    "S105",    # allow "password" strings (tutorial placeholders)
    "PLR2004", # allow magic values
    "N803",    # allow capitalized variable names
    "N806",    # allow single-letter variable names
    "N812",    # allow lowercase class names
    "S",       # skip all bandit checks
    "D400",    # summary line position
    "D401",    # first line should be in imperative mood
    "PLR0915", # allow complex functions
    "B006",   # allow use of mutable defaults
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-locals = 15
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
